resmtp (0.3.3) unstable; urgency=low

  * Link to Boost statically, removed runtime dependencies from Boost in deb
  * Fixed service stop settings in init script

 -- Yuri Epstein <yuri.epstein@gmail.com>  Wed, 27 Jan 2016 10:45:00 +0300
 
resmtp (0.3.2) unstable; urgency=low

  * Reworked DNSBL and DNSWL configuration
  * Quick server stop on SIGINT, SIGTERM (abort protocol, close sockets) 

 -- Yuri Epstein <yuri.epstein@gmail.com>  Fri, 22 Jan 2016 19:23:00 +0300
 
resmtp (0.3.1) unstable; urgency=low

  * Logging refactored: removed extra string objects reallocations
  * Logging configuration: log level can be specified both in config file and
  	command line. Command line has a higher priority

 -- Yuri Epstein <yuri.epstein@gmail.com>  Thu, 21 Jan 2016 14:57:00 +0300
 
resmtp (0.3.0) unstable; urgency=low

  * Set version to 0.3.0: candidate to test on increased load

 -- Yuri Epstein <yuri.epstein@gmail.com>  Wed, 20 Jan 2016 15:10:00 +0300
 
resmtp (0.2.6) unstable; urgency=low

  * Monitoring: implemented
  * Critical bugs fixed
  * Log for Spamhaus
  * Don't check early write for whitelisted clients

 -- Yuri Epstein <yuri.epstein@gmail.com>  Wed, 20 Jan 2016 14:30:00 +0300
 
resmtp (0.2.5) unstable; urgency=low

  * DEB package build: set CMAKE_BUILD_TYPE to 'Release'

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 12 Jan 2016 12:37:00 +0300
 
resmtp (0.2.4) unstable; urgency=low

  * Turn off some excessive debug logging

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 12 Jan 2016 11:49:00 +0300
 
resmtp (0.2.3) unstable; urgency=low

  * Monitoring of number of mails

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 12 Jan 2016 9:53:00 +0300
 
resmtp (0.2.2) unstable; urgency=low

  * Removed global mutex lock in connection acceptor
  * Added log level for buffers dump
  * Unified backend and frontend components logs
  * CMakeLists.txt reworked, app version is now taken from changelog (no need
    to manually update the code)
